--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -47,12 +47,12 @@ box-shadow: 0 12px 20px -10px rgba(0,0,0,0.2);}
 .light-gray-btn {
     color: #6c757d;          /* 글자 색 연한 회색 */
     border-color: #d3d3d3;   /* 테두리 연한 회색 */
-    background-color: #f8f9fa; /* 배경도 연한 회색 */
+    background-color: rgb(248, 248, 248); /* 배경도 연한 회색 */
 }
 
 .light-gray-btn:hover {
     color: #495057;
     border-color: #c0c0c0;
-    background-color: #e9ecef;
+    background-color: rgb(233, 236, 239);
 }
 }
