--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -42,7 +42,7 @@
                   <li><hr class="dropdown-divider text-dark"></li>
 				<li><a class="dropdown-item text-dark" th:href="@{/diary/list}">My Diary</a></li>
                   <li><hr class="dropdown-divider text-dark"></li>
-                  <li><a class="dropdown-item text-dark" href="#">Pet Profile</a></li>
+                  <li><a class="dropdown-item text-dark" th:href="@{/petProfile}">Pet Profile</a></li>
                   <th:block th:if="${session.isLogin}">
                     <li><a class="dropdown-item text-dark" href="#">Pet Health Module</a></li>
                   </th:block>
