--- a/src/main/resources/templates/views/joinForm.html
+++ b/src/main/resources/templates/views/joinForm.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <title>회원 가입</title>
-<link th:href="@{/css/userForm.css}" rel="stylesheet" />
+<link th:href="@{/css/writeBoard.css}" rel="stylesheet" />
 <script src=
 	"https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
