--- a/src/main/resources/templates/views/pet/petProfile.html
+++ b/src/main/resources/templates/views/pet/petProfile.html
@@ -4,6 +4,7 @@
 	layout:decorate="~{layouts/main_layout}">
 <head>
 <meta charset="UTF-8">
+<!-- 반려동물 프로필 -->
 <title>반려동물 프로필</title>
 <link rel="stylesheet" th:href="@{/css/petProfile.css}" />
 </head>
