결제 에러페이지

--- a/src/main/resources/templates/views/order/orderSuccess.html
+++ b/src/main/resources/templates/views/order/orderSuccess.html
@@ -22,7 +22,7 @@
         </div>
         
         <div style="margin-top: 30px;">
-            <a href="/" class="btn-pay" style="text-decoration: none; padding: 10px 20px;">홈으로 가기</a>
+            <a th:href="@{/mainPage}" class="btn-pay" style="text-decoration: none; padding: 10px 20px;">홈으로 가기</a>
             <a href="/order/list" style="margin-left: 10px; color: #666;">주문 내역 확인</a>
         </div>
     </div>
