--- a/src/main/resources/templates/views/pet/petProfile.html
+++ b/src/main/resources/templates/views/pet/petProfile.html
@@ -75,7 +75,8 @@
 				<!-- 기본 반려동물 없을 때 -->
 			<div class= "row my-5">
 				<div class ="col">
-					<input type="button" value="추가하기" class="btn btn-success" id="insertPet"/>
+					<input type="button" value="추가하기" class="btn btn-success pet-btn" 
+					id="insertPet" onclick="location.href='/petAddForm'"/>
 				</div>
 			</div>
 		</div>
