--- a/src/main/resources/templates/views/userUpdateForm.html
+++ b/src/main/resources/templates/views/userUpdateForm.html
@@ -11,7 +11,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>회원 정보 수정</title>
-	<link th:href="@{/css/userForm.css}" rel="stylesheet" />
+	<link th:href="@{/css/writeBoard.css}" rel="stylesheet" />
 </head>
 	<!--/* 
 		block을 사용해도 되고 div에 직접 layout:fragment를 적용해도 된다.
