--- a/src/main/resources/templates/views/pet/petAddForm.html
+++ b/src/main/resources/templates/views/pet/petAddForm.html
@@ -65,7 +65,7 @@
                 <div class="mb-4">
                     <label class="form-label">특징 / 설명</label>
                     <textarea name="content" rows="4"
-                              class="form-control" required></textarea>
+                              class="form-control" required placeholder ="나만이 아는 반려 동물의 특징을 써주세요!"></textarea>
                 </div>
                 <!-- 버튼 -->
                 <div class="text-center mt-5">
