--- a/src/main/resources/templates/views/pet/petAddForm.html
+++ b/src/main/resources/templates/views/pet/petAddForm.html
@@ -20,19 +20,17 @@
 
     <div class="row justify-content-center my-5">
         <div class="col-8">
-            <form action="/petAdd" method="post" enctype="multipart/form-data"
-                  class="pet-form p-5">
-                  <input type ="hidden" name ="userId" id ="userId" th:value = "${userId}"/>
+            <form action="/petAdd" method="post" enctype="multipart/form-data" id = "petAdd" class="pet-form p-5">
                 <!-- 이름 -->
                 <div class="mb-4">
                     <label class="form-label">이름</label>
-                    <input type="text" name="name" class="form-control" required>
+                    <input type="text" name="name" class="form-control" id ="name"  required>
                 </div>
 
                 <!-- 성별 -->
                 <div class="mb-4">
                     <label class="form-label">성별</label>
-                    <select name="gender" class="form-select">
+                    <select name="gender" class="form-select" id="gender">
                         <option value="">선택</option>
                         <option value="여">여</option>
                         <option value="남">남</option>
@@ -42,18 +40,18 @@
                 <!-- 생년월일 -->
                 <div class="mb-4">
                     <label class="form-label">생년월일</label>
-                    <input type="date" name="birthday" class="form-control">
+                    <input type="date" name="birthday" id="birthday" class="form-control">
                 </div>
 
                 <!-- 나이 / 체중 -->
                 <div class="row mb-4">
                     <div class="col">
                         <label class="form-label">나이</label>
-                        <input type="number" name="age" class="form-control">
+                        <input type="number" name="age" id="age" class="form-control">
                     </div>
                     <div class="col">
                         <label class="form-label">체중 (kg)</label>
-                        <input type="number" step="0.1" name="weight" class="form-control">
+                        <input type="number" step="0.1" name="weight" id="weight" class="form-control">
                     </div>
                 </div>
                 <!-- 이미지 -->
@@ -64,7 +62,7 @@
                 <!-- 특징 -->
                 <div class="mb-4">
                     <label class="form-label">특징 / 설명</label>
-                    <textarea name="content" rows="4"
+                    <textarea name="content" rows="4" id="content"
                               class="form-control" required placeholder ="나만이 아는 반려 동물의 특징을 써주세요!"></textarea>
                 </div>
                 <!-- 버튼 -->
@@ -77,6 +75,7 @@
         </div>
     </div>
 </div>
-</th:block>
+    <script th:src="@{/js/pet.js}"></script>
+	</th:block>
 </body>
 </html>
