--- a/src/main/resources/templates/views/pet/petProfile.html
+++ b/src/main/resources/templates/views/pet/petProfile.html
@@ -19,7 +19,7 @@
 		</th:block>
 		<!-- 반려동물이 있으면 -->
 		<th:block th:unless = "${#lists.isEmpty(petList)}">
-			<H2 class= "fw-bold">"[[${userId}]]"님의 반려 동물</H2>
+			<H2 class= "fw-bold">"[[${session.userId}]]"님의 반려 동물</H2>
 		</th:block>
 		</div>
 	</div>
@@ -29,6 +29,7 @@
 		<!-- 기존 반려동물이 있을 때 -->
 			<th:block th:unless = "${#lists.isEmpty(petList)}">
 				<th:block th:each = "pet : ${petList}">
+				<a th:href="@{/petDetail?(petId=${pet.petId})}" style="text-decoration: none; color: inherit;">
 					<div class="row justify-content-center my-4">
 				        <div class="col-10">
 				            <div class="pet-card d-flex align-items-center p-4 " style="cursor: pointer;">
@@ -60,6 +61,7 @@
 				            </div>
 				        </div>
 				    </div>
+				   </a>
 				</th:block>
 			</th:block>
 			<!-- 반려동물이 없을 떄 -->
@@ -72,7 +74,6 @@
 			        <img src="/upload/pet/petLeftdog.png" class="bg-img left">
 			        <img src="/upload/pet/petRightdog.png" class="bg-img right">
 			    </div>
-				<!-- 기본 반려동물 없을 때 -->
 			<div class= "row my-5">
 				<div class ="col">
 					<input type="button" value="추가하기" class="btn btn-success pet-btn" 
