--- a/src/main/resources/templates/views/pet/petProfile.html
+++ b/src/main/resources/templates/views/pet/petProfile.html
@@ -76,7 +76,7 @@
 			    </div>
 			<div class= "row my-5">
 				<div class ="col">
-					<input type="button" value="추가하기" class="btn btn-success pet-btn" 
+					<input type="button" value="펫 추가하기" class="btn btn-success pet-btn" 
 					id="insertPet" onclick="location.href='/petAddForm'"/>
 				</div>
 			</div>
